# LAMMPSeXYZplorer

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: python-package.yml  unit_test.yml
LAMMPShade/: converter.py
examples/: example1.py  example2.py  example3.py  example4.py  full_script_example.py
functions/: LAMMPSreader.py
lammpshade/: Constructor.py  GraphMaker.py  XYZWriter.py  YAMLReader.py  __init__.py  converter.py
tests/: LAMMPS_reader_tests.py  LAMMPShade_tests.py  __init__.py  test.yaml  test_Constructor.py  test_GraphMaker.py  test_XYZWriter.py  test_YAMLReader.py  test_check.xyz  test_converter.py  test_noatomsdata.yaml  test_noatomskeywords.yaml  test_nonatoms.yaml  test_nothermo.yaml
