[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py37']

[tool.isort]
profile = "black"

[tool.pylint]
disable = [
  "C0114",  # missing-module-docstring
  "C0115",  # missing-class-docstring
  "C0116",  # missing-function-docstring
]

[tool.mypy]
ignore_missing_imports = true
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--doctest-modules"
testpaths = [
  "tests",
]

[tool.poetry]
version = "1.0.0"
description = "A simple toolkit for LAMMPS simulations post-processing analysis"
authors = ["Francesco Barberini <francesco.barberini5@studio.unibo.it>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Bavbe97/LAMMPShade"
classifiers = [
    "Programming Language :: Python :: 3.7",
]
dependencies = [
    "python = '^3.7'",
    "pandas",
    "matplotlib"
]
dev-dependencies = [
    "pytest = '^6.0'",
]